--- a/config/environ/local.env
+++ b/config/environ/local.env
@@ -1,12 +1,18 @@
 
-ERROR_RETRY_COUNT=1
-STRIPE_CLIENT_SECRET=""
+ERROR_RETRY_COUNT=3
+HTTP_TOO_MANY_REQ_SLEEP=10
+HTTP_REQ_TIMEOUT_SLEEP=10
+ASYNC_TIMEOUT_SLEEP=10
+
 MBME_PAY_USERNAME=the1app
 MBME_PAY_PASSWORD=6179844
-MBME_BASE_URL=https://qty.mbme.org:6002
+MBME_BASE_URL=https://qty.mbme.org:8080
 MBME_MERCHANT_ID=3589
-MBME_AUTH_TOKEN=/mbme/oauth/token
+MBME_AUTH_TOKEN=/v2/mbme/oauth/token
+
+
 STRIP_PUBLISHABLE_KEY=pk_test_GrpfMC4QsGcYnlDRmMpm8CPs
 STRIPE_CLIENT_SECRET=sk_test_ZgBk8rfJ5rYrCSAkKyqklOdh
 DEFAULT_CURRENCY=usd
 SITE_URL=http://localhost:8000
+
