--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ django-crontab
 newsapi-python
 azure-communication-identity
 django-cors-headers
-mysqlclient==2.1.1
+mysqlclient==2.0.0
 stripe==5.0.0
 aiohttp==3.8.3
 requests==2.28.1
 pytz==2022.7
+django-environ
+pillow
+GDAL
