--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
                     python manage.py collectstatic --no-input &&
-                    gunicorn config.wsgi:application --bind 0.0.0.0:5000"
+                    python manage.py runserver 0.0.0.0:5000"
+
     volumes:
       - .:/app
       - staticfiles:/app/static/
