--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,17 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: docker-registry.cityapl.com/cityapl_auth_service
+    image: the1web
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
                     python manage.py collectstatic --no-input &&
-                    python manage.py runserver 0.0.0.0:5000"
+                    python manage.py runserver 0.0.0.0:8002"
 
     volumes:
       - .:/app
       - staticfiles:/app/static/
-    expose:
-      - 9000
+    ports:
+      - 8002:8002
     restart: "on-failure"
 
 #  nginx:
