--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,9 @@ services:
     ports:
       - 8002:8002
     network_mode: "host"
-
     restart: "on-failure"
+    environment:
+      - ENV=DEV
 
 #  nginx:
 #    build:
