added new models

--- a/config/environ/local.env
+++ b/config/environ/local.env
@@ -8,7 +8,15 @@ MBME_PAY_USERNAME=the1app
 MBME_PAY_PASSWORD=6179844
 MBME_BASE_URL=https://qty.mbme.org:8080
 MBME_MERCHANT_ID=3589
+
 MBME_AUTH_TOKEN=/v2/mbme/oauth/token
+MBME_GET_PENDING_TRANS=/v2/mbme/getPendingTransactions
+MBME_PROCESS_PENDING_TRAN=/v2/mbme/processTransaction
+MBME_FIND_TRAN_BY_ID=/v2/mbme/checkTransaction
+MBME_PAY_BAL=/v2/api/payment
+
+DU_PREPAID_MIN=1
+DU_PREPAID_MAX=1000
 
 
 STRIP_PUBLISHABLE_KEY=pk_test_GrpfMC4QsGcYnlDRmMpm8CPs
