added code for payment and orders api

--- a/config/environ/local.env
+++ b/config/environ/local.env
@@ -17,10 +17,11 @@ MBME_PAY_BAL=/v2/api/payment
 
 DU_PREPAID_MIN=1
 DU_PREPAID_MAX=1000
+DU_PREPAID_SERVICE_ID=1
 
 
 STRIP_PUBLISHABLE_KEY=pk_test_GrpfMC4QsGcYnlDRmMpm8CPs
 STRIPE_CLIENT_SECRET=sk_test_ZgBk8rfJ5rYrCSAkKyqklOdh
-DEFAULT_CURRENCY=usd
+DEFAULT_CURRENCY=AED
 SITE_URL=http://localhost:8000
 
