added order place for du prepaid

--- a/config/environ/local.env
+++ b/config/environ/local.env
@@ -19,6 +19,8 @@ DU_PREPAID_MIN=5
 DU_PREPAID_MAX=1000
 DU_PREPAID_SERVICE_ID=1
 
+MAX_RETRY_COUNT_FO_FAILED_TRANS=10
+
 
 STRIP_PUBLISHABLE_KEY=pk_test_GrpfMC4QsGcYnlDRmMpm8CPs
 STRIPE_CLIENT_SECRET=sk_test_ZgBk8rfJ5rYrCSAkKyqklOdh
