added du postpaid

--- a/config/environ/local.env
+++ b/config/environ/local.env
@@ -17,7 +17,13 @@ MBME_PAY_BAL=/v2/api/payment
 
 DU_PREPAID_MIN=5
 DU_PREPAID_MAX=1000
+
+DU_POSTPAID_MIN=50
+DU_POSTPAID_MAX=10000
+
 DU_PREPAID_SERVICE_ID=1
+DU_POSTPAID_SERVICE_ID=103
+
 
 MAX_RETRY_COUNT_FO_FAILED_TRANS=10
 
